Migrate SPARSE_MAP to MAP: use DataType.MAP + IndexType.MAP instead of separate DataType
Remove SPARSE_MAP from DataType, FieldType, ColumnDataType, and PinotDataType enums.
Add IndexType.MAP to FieldConfig with property-based configuration (TEXT index pattern).
Extend ComplexFieldSpec.MapFieldSpec with keyTypes/defaultValueType for per-key typing.
Delete SparseMapFieldSpec — sparse map columns are now complexFieldSpecs with dataType MAP.
All DataType checks become dataType==MAP + hasMapIndex dispatch. Storage layer (.spmx) unchanged.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>